WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208091
[GTK] Page is not drawn with PSON, hardware acceleration and address typed in URL bar
https://bugs.webkit.org/show_bug.cgi?id=208091
Summary
[GTK] Page is not drawn with PSON, hardware acceleration and address typed in...
Guilaume Ayoub
Reported
2020-02-22 05:42:46 PST
Pages are not drawn when: - hardware acceleration is enabled (it works without), - PSON is enabled (it works in Epiphany 3.35.2 without PSON), - an URL is given in the URL bar (it often works when the page is drawn at startup or when I click on a link). When the cursor is moved on the page, we can see that links are where they are supposed to be on the new page: new page’s layout is done, but the old one is drawn instead. The bug had been reported on Epiphany’s bug tracker, but they said that it’s probably a bug in WebKitGTK. It can be reproduced with Epiphany 3.35.3+ by enabling hardware acceleration and visiting a website using the URL bar.
https://gitlab.gnome.org/GNOME/epiphany/issues/1109
Attachments
Patch
(1.92 KB, patch)
2020-04-10 06:27 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2020-02-23 08:59:24 PST
(In reply to Guilaume Ayoub from
comment #0
)
> Pages are not drawn when: > > - hardware acceleration is enabled (it works without),
Specifically, when hardware acceleration policy is always, right? The bug doesn't occur for on-demand?
Guilaume Ayoub
Comment 2
2020-02-23 09:00:37 PST
> Specifically, when hardware acceleration policy is always, right? The bug > doesn't occur for on-demand?
Exactly.
Guilaume Ayoub
Comment 3
2020-04-09 13:52:50 PDT
Disabling PSON in WebKitGTK with the patch provided in
https://bugs.webkit.org/show_bug.cgi?id=210287
fixes the problem. (Using "always" for hardware acceleration gives really impressive results on my computer ♥.)
Michael Catanzaro
Comment 4
2020-04-09 15:34:13 PDT
Are you building with -DWPE_RENDERER=OFF? Or do you have libwpe etc. installed?
Michael Catanzaro
Comment 5
2020-04-09 15:35:28 PDT
Er I guess if my patch fixed the issue for you, then it's because you have it OFF. AC mode is totally busted right now unless WPE_RENDERER is enabled. These bugs are the same underlying issue; we just need to remember to test both issues to ensure they're both fixed by whatever final patch we come up with.
Guilaume Ayoub
Comment 6
2020-04-09 22:52:23 PDT
(In reply to Michael Catanzaro from
comment #4
)
> Are you building with -DWPE_RENDERER=OFF? Or do you have libwpe etc. > installed?
I do.
> Er I guess if my patch fixed the issue for you, then it's because you have it OFF.
Of course.
> AC mode is totally busted right now unless WPE_RENDERER is enabled. These bugs are the same underlying issue; we just need to remember to test both issues to ensure they're both fixed by whatever final patch we come up with.
I won’t forget ;).
Carlos Garcia Campos
Comment 7
2020-04-10 06:27:23 PDT
Created
attachment 396077
[details]
Patch
Michael Catanzaro
Comment 8
2020-04-10 14:11:28 PDT
Comment on
attachment 396077
[details]
Patch Nice!
Guilaume Ayoub
Comment 9
2020-04-11 07:37:20 PDT
It works well for me, thank you!
Carlos Garcia Campos
Comment 10
2020-04-12 02:27:47 PDT
Committed
r259943
: <
https://trac.webkit.org/changeset/259943
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug