[GTK] Page is not drawn with PSON, hardware acceleration and address typed in URL bar https://bugs.webkit.org/show_bug.cgi?id=208091

Reviewed by Michael Catanzaro.

This happens only when accelerated compositing mode policy is set to always. In this case, the
bindSurfaceToWebPage wayland message is received before the WebPageProxy has updated the web page identifier. We
should always check if there's a provisional page and get its web page identifier.

* UIProcess/gtk/WaylandCompositor.cpp:
(WebKit::WaylandCompositor::bindSurfaceToWebPage):

Canonical link: https://commits.webkit.org/223289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259943 268f45cc-cd09-0410-ab3c-d52691b4dbfc